Version 1.6.0 - 2010-05-09
* Bug fixes (see mercurial logs for details)

Version 1.4.0 - 2010-03-11
* Initial release