@@ -1,3 +1,5 @@
+* Use required on states for dashboard_layout
+
 Version 1.6.0 - 2010-05-09
 * Bug fixes (see mercurial logs for details)
 
